force-app/main/default/objects/ContentVersion/fields/EZProtect4SF__ExternalFileSize__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ExternalFileSize__c</fullName>
    <description>The file size in bytes of the file uploaded to the external provider</description>
    <label>External File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>