force-app/main/default/objects/ContentVersion/fields/EZProtect4SF__FileURL__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__FileURL__c</fullName>
    <description>If the contentVersion Type is “S3” this field is populated with the URL to file content location in S3.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File URL</label>
    <type>Url</type>
</CustomField>