force-app/main/default/objects/ContentVersion/fields/EZProtect4SF__Is_Created_By_EZProtect__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Is_Created_By_EZProtect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created By EZ Protect</label>
    <type>Checkbox</type>
</CustomField>