force-app/main/default/objects/ContentVersion/fields/EZProtect4SF__ScanActivityId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ScanActivityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the scan activity record associated to the ContentVersion record.</description>
    <label>Scan Activity</label>
    <referenceTo>EZProtect4SF__ScanActivity__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>