force-app/main/default/objects/ContentVersion/fields/EZProtect4SF__Type__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Type__c</fullName>
    <description>The type of file that is stored in the contentVersion record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S3</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>