force-app/main/default/objects/ContentVersion/fields/Panel_Finance_Officer__c.field-meta.xml
<CustomField>
    <fullName>Panel_Finance_Officer__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Finance Officer</label>
    <type>Text</type>
</CustomField>