force-app/main/default/objects/ContentVersion/fields/vlocity_ins__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GlobalKey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GlobalKey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>