force-app/main/default/objects/ContentVersion/recordTypes/EZProtect4SF__Default.recordType-meta.xml
<RecordType>
    <fullName>EZProtect4SF__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>